--- a/customer_service_help_page.html
+++ b/customer_service_help_page.html
@@ -52,7 +52,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="customer_servise_help_page.html">Customer Service</a>
+                        <a class="nav-link" href="customer_service_help_page.html">Customer Service</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about_us.html">About Us</a>
@@ -68,13 +68,13 @@
         <div class="row">
             <div class="col-md-6 offset-md-3 col-sm-12 main_block">
                 <div class="col-md-12 col-sm-12 text-center">
-                    <span class=" user_icon"><i class="fa fa-user-circle"></i></span>
+                    <span class="user_icon"><i class="fa fa-user-circle"></i></span>
                     <div class="separator" style="font-size: 24px">HOW COULD WE HELP YOU?</div>
                     <hr style="margin-top: 23px">
                     <p style="text-align: left; font-size: 20px; margin-left: 15px">Frequently asked questions</p>
                     <hr>
                     <div class="accordion" id="accordionExample">
-                        <div class="card" style="border: none">
+                        <div class="card_queston" style="border: none">
                             <div class="card-header" id="headingOne">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block text-left button_box" type="button" data-toggle="collapse" data-target="#collapseOne" aria-controls="collapseOne">
@@ -82,14 +82,14 @@
 						       </button>
                                 </h2>
                             </div>
-                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                                 <div class="card-body answer_box">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                                     in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                                 </div>
                             </div>
                         </div>
-                        <div class="card" style="border: none">
+                        <div class="card_queston" style="border: none">
                             <div class="card-header" id="headingTwo">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block text-left collapsed button_box" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-controls="collapseTwo">
@@ -104,7 +104,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card" style="border: none">
+                        <div class="card_queston" style="border: none">
                             <div class="card-header" id="headingThree">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block text-left collapsed button_box" type="button" data-toggle="collapse" data-target="#collapseThree" aria-controls="collapseThree">
