--- a/about_us.html
+++ b/about_us.html
@@ -96,32 +96,32 @@
             </div>
         </div>
         <!-- Footer -->
-        <footer class="page-footer font-small pt-4 " style="margin-top: 60px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white ">
-            <div class="container-fluid text-center text-md-left ">
-                <div class="row ">
-                    <div class="col-md-5 mt-md-0 mt-3 ">
-                        <h6 class="text-uppercase ">Footer Content</h6>
-                        <p style="font-size: 12px ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        <footer class="page-footer font-small pt-4" style="margin-top: 60px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white">
+            <div class="container-fluid text-center text-md-left">
+                <div class="row">
+                    <div class="col-md-5 mt-md-0 mt-3">
+                        <h6 class="text-uppercase">Footer Content</h6>
+                        <p style="font-size: 12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
-                    <div class="col-md-1 "></div>
-                    <hr class="clearfix w-100 d-md-none pb-3 ">
-                    <div class="col-md-3 mb-md-0 mb-3 col-sm-6 ">
-                        <h6 class="text-uppercase ">Contact Us</h6>
-                        <ul class="list-unstyled ">
-                            <li><a href="#! ">Link 1</a></li>
-                            <li><a href="#! ">Link 2</a></li>
-                            <li><a href="#! ">Link 3</a></li>
-                            <li><a href="#! ">Link 4</a></li>
+                    <div class="col-md-1"></div>
+                    <hr class="clearfix w-100 d-md-none pb-3">
+                    <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
+                        <h6 class="text-uppercase">Contact Us</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="#!">Link 1</a></li>
+                            <li><a href="#!">Link 2</a></li>
+                            <li><a href="#!">Link 3</a></li>
+                            <li><a href="#!">Link 4</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3 mb-md-0 mb-3 col-sm-6 ">
-                        <h6 class="text-uppercase ">Policies & Info</h6>
-                        <ul class="list-unstyled ">
-                            <li><a href="#! ">Link 1</a></li>
-                            <li><a href="#! ">Link 2</a></li>
-                            <li><a href="#! ">Link 3</a></li>
-                            <li><a href="#! ">Link 4</a></li>
+                    <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
+                        <h6 class="text-uppercase">Policies & Info</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="#!">Link 1</a></li>
+                            <li><a href="#!">Link 2</a></li>
+                            <li><a href="#!">Link 3</a></li>
+                            <li><a href="#!">Link 4</a></li>
                         </ul>
                     </div>
                 </div>
@@ -131,6 +131,7 @@
 
 
     <!--Javascript Links-->
+    <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
