--- a/add_new_product.html
+++ b/add_new_product.html
@@ -96,12 +96,12 @@
                                 <button id="add_s" class="add_btn" style="margin-left: 75%;" onclick="return add('size')">Add Size</button>
                             </div>
 						</div>
-						<div class="text-left">
-							<label for="select_file">Select File:</label>
-							<input type="file" class="form-control" id="select_file" multiple>
+						<div class="text-center" style="margin-top: 3%">
+							<input type="file" id="add_product_file" hidden multiple>
+                            <label for="add_product_file" id="feedback_photo">Add Pictures</label>
 						</div>
                          <div class="form-group col-md-2 offset-md-10">
-                            <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 2px; width: 100px; font-size: 20px; margin-top: 20px;">CREATE</button>
+                            <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 2px; width: 100%; font-size: 20px; margin-top: 20px;">CREATE</button>
                         </div>
 						
 					</form>
