--- a/my_orders.html
+++ b/my_orders.html
@@ -111,8 +111,8 @@
                                     <p class="text-left">Color, Size, Unit</p>
                                     <p style="font-weight: bold; font-size: 20px;" class="text-left">Price XXX</p>
                                 </div>
-								<div class="col-md-4"></div>
-							 </div>
+							    <div class="col-md-4"><a href="order_information.html"><i class="fa fa-chevron-right fa-2x chevron"></i></a></div>
+                            </div>      
                         </div>
 
                          <div class="orders_block">
@@ -132,7 +132,7 @@
                                     <p class="text-left">Color, Size, Unit</p>
                                     <p style="font-weight: bold; font-size: 20px;" class="text-left">Price XXX</p>
                                 </div>
-                                <div class="col-md-4"></div>
+                                <div class="col-md-4"><a href="order_information.html"><i class="fa fa-chevron-right fa-2x chevron"></i></a></div>
                              </div>
                         </div>
 
@@ -153,7 +153,7 @@
                                     <p class="text-left">Color, Size, Unit</p>
                                     <p style="font-weight: bold; font-size: 20px;" class="text-left">Price XXX</p>
                                 </div>
-                                <div class="col-md-4"></div>
+                                <div class="col-md-4"><a href="order_information.html"><i class="fa fa-chevron-right fa-2x chevron"></i></a></div>
                              </div>
                         </div>
 
@@ -174,7 +174,7 @@
                                     <p class="text-left">Color, Size, Unit</p>
                                     <p style="font-weight: bold; font-size: 20px;" class="text-left">Price XXX</p>
                                 </div>
-                                <div class="col-md-4"></div>
+                                <div class="col-md-4"><a href="order_information.html"><i class="fa fa-chevron-right fa-2x chevron"></i></a></div>
                              </div>
                         </div>
                             
@@ -199,7 +199,7 @@
                                     <p class="text-left">Color, Size, Unit</p>
                                     <p style="font-weight: bold; font-size: 20px;" class="text-left">Price XXX</p>
                                 </div>
-                                <div class="col-md-4"></div>
+                                <div class="col-md-4"><a href="order_information_completed.html"><i class="fa fa-chevron-right fa-2x chevron"></i></a></div>
                              </div>
                         </div>
 
@@ -220,7 +220,7 @@
                                     <p class="text-left">Color, Size, Unit</p>
                                     <p style="font-weight: bold; font-size: 20px;" class="text-left">Price XXX</p>
                                 </div>
-                                <div class="col-md-4"></div>
+                                <div class="col-md-4"><a href="order_information_completed.html"><i class="fa fa-chevron-right fa-2x chevron"></i></a></div>
                              </div>
                         </div>
 
@@ -241,7 +241,7 @@
                                     <p class="text-left">Color, Size, Unit</p>
                                     <p style="font-weight: bold; font-size: 20px;" class="text-left">Price XXX</p>
                                 </div>
-                                <div class="col-md-4"></div>
+                                <div class="col-md-4"><a href="order_information_completed.html"><i class="fa fa-chevron-right fa-2x chevron"></i></a></div>
                              </div>
                         </div>
 
@@ -262,7 +262,7 @@
                                     <p class="text-left">Color, Size, Unit</p>
                                     <p style="font-weight: bold; font-size: 20px;" class="text-left">Price XXX</p>
                                 </div>
-                                <div class="col-md-4"></div>
+                                <div class="col-md-4"><a href="order_information_completed.html"><i class="fa fa-chevron-right fa-2x chevron"></i></a></div>
                              </div>
                         </div>
                         
