--- a/add_new_product.html
+++ b/add_new_product.html
@@ -97,8 +97,8 @@
                             </div>
 						</div>
 						<div class="text-center" style="margin-top: 3%">
-							<input type="file" id="add_product_file" hidden multiple>
-                            <label for="add_product_file" id="feedback_photo">Add Pictures</label>
+							<input type="file" id="add_product_file" accept="image/*" hidden multiple>
+                            <label for="add_product_file" id="feedback_photo"><i class="fa fa-camera"></i>Add Pictures</label>
 						</div>
                          <div class="form-group col-md-2 offset-md-10">
                             <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 2px; width: 100%; font-size: 20px; margin-top: 20px;">CREATE</button>
