--- a/feedback_page.html
+++ b/feedback_page.html
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="customer_service_help_page.html">Customer Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="about_us.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="LogInpage.html">Login</a>
