--- a/my_orders.html
+++ b/my_orders.html
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="customer_service_help_page.html">Customer Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="about_us.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="LogInpage.html">Login</a>
@@ -271,7 +271,7 @@
             </div>
         </div>
         <!-- Footer -->
-        <footer class="page-footer font-small pt-4" style="margin-top: 230px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white ">
+        <footer class="page-footer font-small pt-4" style="margin-top: 100px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white ">
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
                     <div class="col-md-5 mt-md-0 mt-3">
