--- a/change_customer_ac.html
+++ b/change_customer_ac.html
@@ -59,14 +59,34 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="LogInpage.html">Login</a>
-                        <a class="nav-link" href="about_us.html" hidden>Account</a>
+                        <a class="nav-link" href="#" hidden>Account</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <!--Form-->
         <div class="row">
-            <div class="col-md-6 offset-md-3 col-sm-12 main_block">
+            <div class="col-md-1"></div>
+            <div class="col-md-2 account_block text-center">
+                <p class="user_icon" style="font-size: 80px;"><i class="fa fa-user-circle"></i></p>
+                <p class="p_name">Firstname Surname</p>
+                <p class="p_email">customer.email@mail.fi</p>
+                <hr class="hr_account"></hr>
+                <div class="account_block_bnt">
+                    <a href="my_orders.html" class="account_block_link">Order History</a>
+                </div>
+                <div class="account_block_bnt">
+                    <a href="change_customer_ac.html" class="account_block_link">Edit Account</a>
+                </div>
+                <div class="account_block_bnt">
+                    <a href="main.html" class="account_block_link">Back to shop</a>
+                </div>
+                <div class="account_block_bnt">
+                    <a href="#" class="account_block_link">Log out</a>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+                <div class="col-md-6 col-sm-12 main_block">
                 <div class="col-md-12 col-sm-12 text-center">
                     <span class=" user_icon"><i class="fa fa-user-circle"></i></span>
                     <div class="separator" style="font-size: 24px">CHANGE YOUR ACCOUNT</div>
@@ -119,6 +139,7 @@
                         </div>
                         <div class="form-row">
                             <div class="col-md-6 text-left">
+                                <a href="my_orders.html" class="btn btn-success btn-lg" role="button" style="border-radius: 15px; background-color: gray; padding: 7px; width: 120px; font-size: 20px">BACK</a>
                             </div>
                             <div class="form-group col-md-6 text-right">
                                 <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 7px; width: 120px; font-size: 20px">CHANGE</button>
