--- a/add_new_product.html
+++ b/add_new_product.html
@@ -66,7 +66,27 @@
         </nav>
         <!--Form-->
         <div class="row">
-            <div class="col-md-6 offset-md-3 col-sm-12 main_block">
+            <div class="col-md-1"></div>
+            <div class="col-md-2 account_block text-center">
+                <p class="user_icon" style="font-size: 80px;"><i class="fa fa-user-circle"></i></p>
+                <p class="p_name">Company Name</p>
+                <p class="p_email">company.email@mail.fi</p>
+                <hr class="hr_account"></hr>
+                <div class="account_block_bnt">
+                    <a href="add_new_product.html" class="account_block_link">Add new product</a>
+                </div>
+                <div class="account_block_bnt">
+                    <a href="change_company_ac.html" class="account_block_link">Edit Account</a>
+                </div>
+                <div class="account_block_bnt">
+                    <a href="main.html" class="account_block_link">Back to shop</a>
+                </div>
+                <div class="account_block_bnt">
+                    <a href="#" class="account_block_link">Log out</a>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-6 col-sm-12 main_block">
                 <div class="col-md-12 col-sm-12 text-center">
                     <span class=" user_icon"><i class="fa fa-user-circle"></i></span>
                     <div class="separator" style="font-size: 24px">ADD NEW PRODUCT</div>
@@ -94,6 +114,10 @@
                                 <!--for adding new field-->
                                 <div id='new_product_size'></div>
                                 <button id="add_s" class="add_btn" style="margin-left: 75%;" onclick="return add('size')">Add Size</button>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="product_price">Product Price:</label>
+                                <input type="text" class="form-control" id="product_price">
                             </div>
 						</div>
 						<div class="text-center" style="margin-top: 3%">
