--- a/customer_service_help_page.html
+++ b/customer_service_help_page.html
@@ -124,24 +124,21 @@
                     <p style="text-align: left; font-size: 20px; margin-left: 15px">You can send us a message</p>
                     <hr>
                     <form>
-                        <div class="form-group text-left" style="margin-top: 15px">
-                            <label for="exampleFormControlInput1">Email address</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="How can we contact you (write your email)?">
+                        <div class="form-group text-left" style="margin-top: 15px; margin-left: 14px; margin-right: 14px">
+                            <label for="email_customer_service">Email address</label>
+                            <input type="email" class="form-control" id="email_customer_service" placeholder="How can we contact you (write your email)?">
                         </div>
+                        <div class="form-group text-left" style="margin-left: 14px; margin-right: 14px">
+                            <label for="textarea">Textarea</label>
+                            <textarea class="form-control" id="textarea" rows="3" placeholder="Please, write your message here, explain your problem" style="border-radius: 15px !important; border: 1px solid #31A13C !important;"></textarea>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-md-6 text-left"></div>
+                        <div class="form-group col-md-6 text-right">
+                            <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 4px; width: 100px; font-size: 20px; margin-right: 14px">SEND</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group" style="margin-left: 14px; margin-right: 14px">
-                    <label for="exampleFormControlTextarea1">Textarea</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Please, write your message here, explain your problem" style="border-radius: 15px !important; border: 1px solid #31A13C !important;"></textarea>
-                </div>
-                <div class="form-row">
-                    <div class="col-md-6 text-left">
-                    </div>
-                    <div class="form-group col-md-6 text-right">
-                        <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 4px; width: 100px; font-size: 20px; margin-right: 14px">SEND</button>
-                    </div>
-                </div>
-                </form>
-
             </div>
         </div>
         <!-- Footer -->
