--- a/feedback_page.html
+++ b/feedback_page.html
@@ -59,7 +59,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="LogInpage.html">Login</a>
-                        <a class="nav-link" href="about_us.html" hidden>Account</a>
+                        <a class="nav-link" href="#" hidden>Account</a>
                     </li>
                 </ul>
             </div>
@@ -76,7 +76,7 @@
                     <a href="main.html" class="account_block_link">Back to shop</a>
                 </div>
                 <div class="account_block_bnt">
-                    <a href="#" class="account_block_link">Edit Account</a>
+                    <a href="change_customer_ac.html" class="account_block_link">Edit Account</a>
                 </div>
                 <div class="account_block_bnt">
                     <a href="#" class="account_block_link">Log out</a>
