--- a/my_orders.html
+++ b/my_orders.html
@@ -59,7 +59,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="LogInpage.html">Login</a>
-                        <a class="nav-link" href="about_us.html" hidden>Account</a>
+                        <a class="nav-link" href="#" hidden>Account</a>
                     </li>
                 </ul>
             </div>
@@ -73,10 +73,13 @@
                 <p class="p_email">customer.email@mail.fi</p>
                 <hr class="hr_account"></hr>
                 <div class="account_block_bnt">
-                    <a href="main.html" class="account_block_link">Back to shop</a>
+                    <a href="my_orders.html" class="account_block_link">Order History</a>
                 </div>
                 <div class="account_block_bnt">
-                    <a href="#" class="account_block_link">Edit Account</a>
+                    <a href="change_customer_ac.html" class="account_block_link">Edit Account</a>
+                </div>
+                <div class="account_block_bnt">
+                    <a href="main.html" class="account_block_link">Back to shop</a>
                 </div>
                 <div class="account_block_bnt">
                     <a href="#" class="account_block_link">Log out</a>
