--- a/order_information.html
+++ b/order_information.html
@@ -59,7 +59,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="LogInpage.html">Login</a>
-                        <a class="nav-link" href="about_us.html" hidden>Account</a>
+                        <a class="nav-link" href="#" hidden>Account</a>
                     </li>
                 </ul>
             </div>
@@ -73,10 +73,13 @@
                 <p class="p_email">customer.email@mail.fi</p>
                 <hr class="hr_account"></hr>
                 <div class="account_block_bnt">
-                    <a href="main.html" class="account_block_link">Back to shop</a>
+                    <a href="my_orders.html" class="account_block_link">Order History</a>
                 </div>
                 <div class="account_block_bnt">
-                    <a href="#" class="account_block_link">Edit Account</a>
+                    <a href="change_customer_ac.html" class="account_block_link">Edit Account</a>
+                </div>
+                <div class="account_block_bnt">
+                    <a href="main.html" class="account_block_link">Back to shop</a>
                 </div>
                 <div class="account_block_bnt">
                     <a href="#" class="account_block_link">Log out</a>
@@ -170,7 +173,7 @@
                              <div class="row">
                                 <div class="col-md-2"><i class="fa fa-question fa-2x"></i></div>
                                 <div class="col-md-5 text-left"><p style="font-weight: bold; font-size: 18px">Order questions</p></div>
-                                <div class="offset-3 col-md-2"><a href="customer_service_help_page.html"><i class="fa fa-chevron-right chevron_back"></i></a></div>
+                                <div class="offset-3 col-md-2"><a href="order_questions_page.html"><i class="fa fa-chevron-right chevron_back"></i></a></div>
                              </div>
                         </div>
 
