--- a/order_questions_page.html
+++ b/order_questions_page.html
@@ -88,105 +88,79 @@
             <div class="col-md-1"></div>
             <div class="col-md-6 col-sm-12 main_block">
                 <div class="col-md-12 col-sm-12 text-center">
-                    <div class="row">
-                        <div class="col-md-1" style="margin-top: 2%"><a href="my_orders.html"><i class="fa fa-chevron-left chevron_back fa-2x"></i></a></div>
-                        <div class="offset-1 col-md-8"><div style="font-size: 24px; font-weight: bold; margin-top: 10px;">ORDER INFORMATION</div></div>
+                    <span class="user_icon"><i class="fa fa-user-circle"></i></span>
+                    <div class="separator" style="font-size: 24px">HOW COULD WE HELP YOU?</div>
+                    <hr style="margin-top: 23px">
+                    <p style="text-align: left; font-size: 20px; margin-left: 15px">Frequently asked questions</p>
+                    <hr>
+                    <div class="accordion" id="accordionExample">
+                        <div class="card_queston" style="border: none">
+                            <div class="card-header" id="headingOne">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link btn-block text-left button_box" type="button" data-toggle="collapse" data-target="#collapseOne" aria-controls="collapseOne">
+                                  Question #1
+                               </button>
+                                </h2>
+                            </div>
+                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body answer_box">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card_queston" style="border: none">
+                            <div class="card-header" id="headingTwo">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link btn-block text-left collapsed button_box" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-controls="collapseTwo">
+                                  Question #2
+                                </button>
+                                </h2>
+                            </div>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                <div class="card-body answer_box">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card_queston" style="border: none">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link btn-block text-left collapsed button_box" type="button" data-toggle="collapse" data-target="#collapseThree" aria-controls="collapseThree">
+                                  Question #3
+                                </button>
+                                </h2>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body answer_box">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <hr style="margin-top: 15px;"></hr>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <p class="delivery_text_order_info">Delivered XX.XX.XX </p>
+                    <hr style="margin-top: 23px">
+                    <p style="text-align: left; font-size: 20px; margin-left: 15px">You can send us a message</p>
+                    <hr>
+                    <form>
+                        <div class="form-group text-left" style="margin-top: 15px; margin-left: 14px; margin-right: 14px">
+                            <label for="email_customer_service">Email address</label>
+                            <input type="email" class="form-control" id="email_customer_service" placeholder="How can we contact you (write your email)?">
                         </div>
-                        <div class="col-md-6 col-sm-6">
-                            <p class="status_order_info">Received</p>
+                        <div class="form-group text-left" style="margin-left: 14px; margin-right: 14px">
+                            <label for="textarea">Textarea</label>
+                            <textarea class="form-control" id="textarea" rows="3" placeholder="Please, write your message here, explain your problem" style="border-radius: 15px !important; border: 1px solid #31A13C !important;"></textarea>
                         </div>
-                    </div>
-                    <hr style="margin-top: -1px"></hr>
-                    <!-- Main Block-->
-                    <div id="active_block" style="height: 900px">
-                        <div class="orders_block">
-                            <div class="row" style="margin-top: 15px">
-								<div class="col-md-4"><img src="./images/placeholder.png" class="product_img_orders"></div>
-								<div class="col-md-4">
-                                    <p style="font-weight: bold; font-size: 23px;" class="text-left">Product name</p>
-                                    <p class="text-left">Color, Size, Unit</p>
-                                    <p style="font-weight: bold; font-size: 20px;" class="text-left">Price XXX</p>
-                                </div>
-                                <div class="col-md-3">
-                                    <a href="feedback_page.html" class="btn btn-success btn-md feedback_btn" role="button">Give Feedback</a>
-                                </div>
-								<div class="col-md-1" style="margin-top: 6%;"><a href="#"><i class="fa fa-chevron-right fa-2x chevron"></i></a></div> <!--Link to Product Page -->
-							 </div>
+                        <div class="form-row">
+                            <div class="col-md-6 text-left"></div>
+                        <div class="form-group col-md-6 text-right">
+                            <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 4px; width: 100px; font-size: 20px; margin-right: 14px">SEND</button>
                         </div>
-                        <div class="row" style="margin-top: 3%">
-                            <div class="col-md-2"><p class="order_info_text_in_block">Tracking</p></div>
-                        </div>
-                        <div class="tracking_block">
-                            <div class="row">
-                                <div class="col-md-8">
-                                    <div class="stepper_container">
-                                        <ul>
-                                            <li class="selected_step">
-                                                <span>15:43</span>
-                                                <div>The latest news</div>
-                                            </li>
-                                            <li>
-                                                <span>XX.XX</span>
-                                                <div>The second latest news</div>
-                                            </li>
-                                            <li>
-                                                <span>XX.XX</span>
-                                                <div>The third latest news</div>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-md-4" style="margin-top: 2%">Departure date: XX.XX</div>
-                             </div>
-                             <button type="button" class="btn btn-lg" style="background-color: white; width: 90%; height: 50px; border: none; margin-top: -5%; border-top: 1px solid gray">Show more<i class="fa fa-refresh" style="padding: 5px;"></i></button>
-                        </div>
-                        <div class="row" style="margin-top: 3%">
-                            <div class="col-md-3"><p class="order_info_text_in_block">Delivery address</p></div>
-                        </div>
-                        <div class="tracking_block">
-                            <div class="row">
-                                <div class="offset-1 col-md-6 text-left">
-                                    <p style="font-weight: bold; margin-top: 3%; font-size: 17px">Name Surname</p>
-                                    <p style="margin-top: -10px">Address of the street/house/apartment</p>
-                                    <p style="margin-top: -10px">Postal Code</p>
-                                    <p style="margin-top: -10px">Phone number</p>
-                                   
-                                </div>
-                                <div class="col-md-5"></div>
-                             </div>
-                        </div>
-                         <div class="row" style="margin-top: 3%">
-                            <div class="col-md-2"><p class="order_info_text_in_block">Service</p></div>
-                        </div>
-                        <div class="tracking_block">
-                            <div class="row">
-                                <div class="col-md-2" style="margin-top: 3%"><i class="fa fa-check-circle-o fa-2x"></i></div>
-                                <div class="col-md-5 text-left">
-                                    <p style="margin-top: 3%; font-weight: bold; font-size: 19px">Guarantee</p>
-                                    <p style="margin-top: -15px; font-size: 12px">Guarantee is valid until xx/xx</p>
-                                </div>
-                                <div class="offset-3 col-md-2" style="margin-top: 3.5%"><a href="guarantee_page.html"><i class="fa fa-chevron-right chevron_back"></i></a></div>
-                             </div>
-                             <hr style="margin-top: -1px"></hr>
-                             <div class="row">
-                                <div class="col-md-2"><i class="fa fa-question fa-2x"></i></div>
-                                <div class="col-md-5 text-left"><p style="font-weight: bold; font-size: 18px">Order questions</p></div>
-                                <div class="offset-3 col-md-2"><a href="customer_service_help_page.html"><i class="fa fa-chevron-right chevron_back"></i></a></div>
-                             </div>
-                        </div>
-
-
-
-
-                    </div> <!--Active block -->      
-                </div> <!--Class col-md 12 col-sm-12 text-center -->
-            </div> <!--Main block -->
-        </div>
+                    </form>
+                </div> <!--col-md-12 col-sm-12 text-center-->
+            </div> <!--col-md-6 col-sm-12 main_block-->
+        </div> <!-- Row -->
         <!-- Footer -->
         <footer class="page-footer font-small pt-4" style="margin-top: 100px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white ">
             <div class="container-fluid text-center text-md-left">
