--- a/LogInpage.html
+++ b/LogInpage.html
@@ -47,9 +47,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#"><img src="images/fiflag.jpg" alt="Finnish" class="langicon">&nbsp;Finnish</a>
-                            </a>
                             <a class="dropdown-item" href="#"><img src="images/flag-Sweden.jpg" alt="Sweden" class="langicon">&nbsp;Swedish</a>
-                            </a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -86,6 +84,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -102,7 +101,6 @@
                     <span class="hide_show">/</span>
                     <input type="button" id="create_button" class="hide_show" value="Create an Account" onclick="show_create()">
                 </div>
-
                 <div class="col-md-12 col-sm-12">
                     <div id="login_page">
                         <p style="text-align: center; font: Bold 47px/55px Segoe UI; color: #31A13C; margin-top: 2%">Welcome Back!</p>
@@ -128,15 +126,11 @@
                                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                     <label class="form-check-label" for="exampleCheck1">Remember me</label>
                                 </div>
-
                             </div>
                             <button type="submit" class="login-btn" style="margin-top: 70px">LOG IN</button>
                         </form>
                     </div>
-
                 </div>
-
-
                 <!--Main Part - Create new Account Form  -->
                 <div id="create_an_account">
                     <p style="text-align: center; font: Bold 36px/54px Segoe UI; color: #31A13C;">Choose the suitable option for you:</p>
@@ -145,7 +139,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Footer -->
         <footer class="page-footer font-small pt-4" style="margin-top: 60px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white">
             <div class="container-fluid text-center text-md-left">
@@ -179,11 +172,6 @@
             </div>
         </footer>
     </div>
-
-
-
-
-
     <!--Javascript Links-->
     <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
