--- a/add_new_product.html
+++ b/add_new_product.html
@@ -46,9 +46,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#"><img src="images/fiflag.jpg" alt="Finnish" class="langicon">&nbsp;Finnish</a>
-                            </a>
                             <a class="dropdown-item" href="#"><img src="images/flag-Sweden.jpg" alt="Sweden" class="langicon">&nbsp;Swedish</a>
-                            </a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -85,6 +83,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -131,7 +130,6 @@
                                 <!--for adding new field-->
                                 <div id='new_product_color'></div>
                                 <button id="add_c" class="add_btn" style="margin-left: 70%;" onclick="return add('color')">Add Color</button>
-
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="product_size">Product Size:</label>
@@ -152,7 +150,6 @@
                          <div class="form-group col-md-2 offset-md-10">
                             <button type="submit" class="btn btn-primary" style="border-radius: 15px; background-color: #31A13C; padding: 2px; width: 100%; font-size: 20px; margin-top: 20px;">CREATE</button>
                         </div>
-						
 					</form>
                 </div>
             </div>
