--- a/feedback_page.html
+++ b/feedback_page.html
@@ -46,9 +46,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#"><img src="images/fiflag.jpg" alt="Finnish" class="langicon">&nbsp;Finnish</a>
-                            </a>
                             <a class="dropdown-item" href="#"><img src="images/flag-Sweden.jpg" alt="Sweden" class="langicon">&nbsp;Swedish</a>
-                            </a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -85,6 +83,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -180,8 +179,7 @@
                             <div class="row" style="margin-top: 5%">
                                 <div class="offset-3 col-md-6">
                                     <input type="file" id="feedback_file" accept="image/*" hidden multiple>
-                                    <label for="feedback_file" id="feedback_photo"><i class="fa fa-camera"></i>Add Pictures</label>
-                                    
+                                    <label for="feedback_file" id="feedback_photo"><i class="fa fa-camera"></i>Add Pictures</label> 
                                 </div>
                             </div>
                             <div class="form-group col-md-4 offset-md-8" style="margin-top: 3%">
