--- a/order_questions_page.html
+++ b/order_questions_page.html
@@ -46,9 +46,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#"><img src="images/fiflag.jpg" alt="Finnish" class="langicon">&nbsp;Finnish</a>
-                            </a>
                             <a class="dropdown-item" href="#"><img src="images/flag-Sweden.jpg" alt="Sweden" class="langicon">&nbsp;Swedish</a>
-                            </a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -85,6 +83,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -175,7 +174,8 @@
                         </div>
                         <div class="form-group text-left" style="margin-left: 14px; margin-right: 14px">
                             <label for="textarea">Textarea</label>
-                            <textarea class="form-control" id="textarea" rows="3" placeholder="Please, write your message here, explain your problem" style="border-radius: 15px !important; border: 1px solid #31A13C !important;"></textarea>
+                            <textarea class="form-control" id="textarea" rows="3" placeholder="Please, write your message here, explain your problem" style="border-radius: 15px !important; border: 1px solid #31A13C !important;">
+                            </textarea>
                         </div>
                         <div class="form-row">
                             <div class="col-md-6 text-left"></div>
