--- a/create_customer_ac.html
+++ b/create_customer_ac.html
@@ -46,9 +46,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#"><img src="images/fiflag.jpg" alt="Finnish" class="langicon">&nbsp;Finnish</a>
-                            </a>
                             <a class="dropdown-item" href="#"><img src="images/flag-Sweden.jpg" alt="Sweden" class="langicon">&nbsp;Swedish</a>
-                            </a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -85,6 +83,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </li>
                 </ul>
             </div>
