--- a/order_information.html
+++ b/order_information.html
@@ -46,9 +46,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#"><img src="images/fiflag.jpg" alt="Finnish" class="langicon">&nbsp;Finnish</a>
-                            </a>
                             <a class="dropdown-item" href="#"><img src="images/flag-Sweden.jpg" alt="Sweden" class="langicon">&nbsp;Swedish</a>
-                            </a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -85,6 +83,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -164,8 +163,8 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4" style="margin-top: 2%">Departure date: XX.XX</div>
-                             </div>
-                             <button type="button" class="btn btn-lg" style="background-color: white; width: 90%; height: 50px; border: none; margin-top: -5%; border-top: 1px solid gray">Show more<i class="fa fa-refresh" style="padding: 5px;"></i></button>
+                            </div>
+                            <button type="button" class="btn btn-lg" style="background-color: white; width: 90%; height: 50px; border: none; margin-top: -5%; border-top: 1px solid gray">Show more<i class="fa fa-refresh" style="padding: 5px;"></i></button>
                         </div>
                         <div class="row" style="margin-top: 3%">
                             <div class="col-md-3"><p class="order_info_text_in_block">Delivery address</p></div>
@@ -177,12 +176,11 @@
                                     <p style="margin-top: -10px">Address of the street/house/apartment</p>
                                     <p style="margin-top: -10px">Postal Code</p>
                                     <p style="margin-top: -10px">Phone number</p>
-                                   
                                 </div>
                                 <div class="col-md-5"></div>
                              </div>
                         </div>
-                         <div class="row" style="margin-top: 3%">
+                        <div class="row" style="margin-top: 3%">
                             <div class="col-md-2"><p class="order_info_text_in_block">Service</p></div>
                         </div>
                         <div class="tracking_block">
@@ -199,24 +197,20 @@
                                 <div class="col-md-2"><i class="fa fa-question fa-2x"></i></div>
                                 <div class="col-md-5 text-left"><p style="font-weight: bold; font-size: 18px">Order questions</p></div>
                                 <div class="offset-3 col-md-2"><a href="order_questions_page.html"><i class="fa fa-chevron-right chevron_back"></i></a></div>
-                             </div>
+                            </div>
                         </div>
-
-
-
-
                     </div> <!--Active block -->      
                 </div> <!--Class col-md 12 col-sm-12 text-center -->
             </div> <!--Main block -->
-        </div>
+        </div><!--class="row"-->
         <!-- Footer -->
-        <footer class="page-footer font-small pt-4" style="margin-top: 100px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white ">
+        <footer class="page-footer font-small pt-4" style="margin-top: 100px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white">
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
                     <div class="col-md-5 mt-md-0 mt-3">
                         <h6 class="text-uppercase">Footer Content</h6>
                         <p style="font-size: 12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                     <div class="col-md-1"></div>
                     <hr class="clearfix w-100 d-md-none pb-3">
@@ -241,7 +235,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+    </div><!--class="container-fluid"-->
 
     <!--Javascript Links-->
     <script src="./main.js"></script>
