--- a/main.html
+++ b/main.html
@@ -109,37 +109,37 @@
 	    <div class="row">
 	    	<div class="col-md-3">
 	    		<p class="way">Home / Shop / Summer / ...</p>
-	    		<article class="filter-group" style="margin-top: 10%; margin-right: 3%">
+	    		<article class="filter-group" style="margin-top: 10%; margin-right: 3%;">
                     <header class="card-header"> 
-                     	<a href="#" data-toggle="collapse" data-target="#collapse_aside1" class="collapsed"> 
+                     	<a href="#" data-toggle="collapse" data-target="#category_search" class="collapsed"> 
                      		<i class="icon-control fa fa-chevron-down"></i>
                             <h6 class="title">Category</h6>
                         </a> 
                     </header>
-                    <div class="filter-content collapse" id="collapse_aside1">
+                    <div class="filter-content collapse" id="category_search">
                          <div class="card-body">
                          	<div class="box_inside">
                          		<form class="search_inside form-inline my-2 my-lg-0">
-								      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="background-color: #ccc; border-radius: 3px !important; width: 100%; margin-left: 2%">
-								 </form>
+								      	<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="background-color: #ccc; border-radius: 3px !important; width: 100%; margin-left: 2%">
+								 		</form>
                          		<ul class="list-menu">
-	                                <li>
-	                                 	<input type="checkbox">
-										<span class="checkmark">Some Text</span>
-									</li>
-									<li>
-										<input type="checkbox">
-										<span class="checkmark">Some Text</span>
-									</li>
-									<li>
-										<input type="checkbox">
-										<span class="checkmark">Some Text</span>
-									</li>
-									<li>
-										<input type="checkbox">
-										<span class="checkmark">Some Text</span>
-									</li>
-                             	</ul>
+	                              <li>
+			                           <input type="checkbox">
+												<span class="checkmark">Some Text</span>
+											</li>
+											<li>
+												<input type="checkbox">
+												<span class="checkmark">Some Text</span>
+											</li>
+											<li>
+												<input type="checkbox">
+												<span class="checkmark">Some Text</span>
+											</li>
+											<li>
+												<input type="checkbox">
+												<span class="checkmark">Some Text</span>
+											</li>
+		                        </ul>
                          	</div>
                          	<button type="button" class="clear">Clear</button>
                         </div>
@@ -147,12 +147,12 @@
                  </article>
                  <article class="filter-group" style="margin-right: 3%">
                     <header class="card-header"> 
-                     	<a href="#" data-toggle="collapse" data-target="#collapse_aside3" class="collapsed">
+                     	<a href="#" data-toggle="collapse" data-target="#company_search" class="collapsed">
                      		<i class="icon-control fa fa-chevron-down"></i>
                             <h6 class="title">Company</h6>
                          </a> 
                     </header>
-                    <div class="filter-content collapse" id="collapse_aside3">
+                    <div class="filter-content collapse" id="company_search">
                         <div class="card-body">
                          	<div class="box_inside">
                          		<form class="search_inside form-inline my-2 my-lg-0">
@@ -183,14 +183,14 @@
                  </article>
                  <article class="filter-group" style="margin-right: 3%">
                      <header class="card-header">
-                     	<a href="#" data-toggle="collapse" data-target="#collapse_aside2" class="collapsed"> 
+                     	<a href="#" data-toggle="collapse" data-target="#price_search" class="collapsed"> 
                      		<i class="icon-control fa fa-chevron-down"></i>
                              <h6 class="title">Price </h6>
                          </a> 
                      </header>
-                     <div class="filter-content collapse" id="collapse_aside2">
-                         <div class="card-body"> 
-                         	<input type="range" class="custom-range" min="0" max="100" name="">
+                     <div class="filter-content collapse" id="price_search">
+                         <div class="card-body price-body"> 
+                         	<input type="range" class="custom-range" min="0" max="1000000" name="">
                             <div class="form-row">
                                 <div class="form-group col-md-6"> 
                                  	<label>Min</label> 
@@ -201,8 +201,9 @@
                                  	<input class="form-control" placeholder="$1,0000" type="number"> 
                                 </div>
                              </div> 
+                             <button type="button" class="clear">Clear</button>
                          </div>
-                         <button type="button" class="clear">Clear</button>
+                         
                      </div>
                  </article>
 	    	</div><!--class="col-md-3"-->
